--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <title> Where to Travel </title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I&libraries=places"></script>
+    <script src="script.js"></script>
   </head>
   
-  <body>
+  <body onload="createMap()">
+
+    <div id="map-container" style="height: 300px;width: 400px"> </div>
     
+    <button onclick="findPlaces()"> Find Places </button>
+
+    <div id="results"> </div>
   </body>
 </html>
