--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -5,9 +5,23 @@
     <title> Where to Travel </title>
     <link rel="stylesheet" href="style.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I&libraries=places"></script>
+    <script type="text/javascript" src="example_places.json"></script>
+    <script src="script.js"></script>
   </head>
   
-  <body>
-
+  <body onload="initialize();">
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC7iwmuTMZ0Et75vncV8q9wxhsdzJwE8s">
+    </script>
+    <div id="container">
+        <div id="nav">
+          <form>
+            <label for="radius">Search Radius: </label>
+            <input type="text" id="usr-radius" name="radius"></input>
+            <input type="submit" value="Search">
+          </form>
+        </div>
+        <div id="map"></div>
+    </div>
   </body>
 </html>
