Add multiple place functionality

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title> Where to Travel </title>
+    <title>Where to ?</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I&libraries=places"></script>
     <script type="text/javascript" src="example_places.js"></script>
@@ -10,13 +10,10 @@
   </head>
   
   <body onload="initialize();">
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC7iwmuTMZ0Et75vncV8q9wxhsdzJwE8s">
-    </script>
     <div id="container">
         <div id="nav">
           <form>
-            <label for="radius">Search Radius: </label>
+            <label for="radius">Travel time: </label>
             <input type="text" id="usr-radius" name="radius"></input>
             <input type="submit" value="Search">
           </form>
