--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -13,8 +13,13 @@
     <div id="container">
         <div id="nav">
           <form>
-            <label for="radius">Travel time: </label>
-            <input type="text" id="usr-radius" name="radius"></input>
+            <label>Travel time: </label>
+            <div id="input-wrap">
+              <label>Hrs</label>
+              <input type="text" name="hrs">
+              <label>Mnts</label>
+              <input type="text" name="mnts">
+            </div>
             <input type="submit" value="Search">
           </form>
         </div>
