Add submit button click listen

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -15,12 +15,12 @@
           <form>
             <label>Travel time: </label>
             <div id="input-wrap">
-              <label>Hrs</label>
-              <input type="text" name="hrs">
-              <label>Mnts</label>
-              <input type="text" name="mnts">
+              <label>Hours</label>
+              <input type="text" name="hours" id="hrs">
+              <label>Minutes</label>
+              <input type="text" name="minutes" id="mnts">
             </div>
-            <input type="submit" value="Search">
+            <input type="submit" value="Search" id="submit">
           </form>
         </div>
         <div id="map"></div>
