Remove your testing stuff from index.

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title> Where to Travel </title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I"></script>
-    <script src="script.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I&libraries=places"></script>
   </head>
   
   <body>
-  <div id="output"></div>
+
   </body>
 </html>
