hotfix -> add event listener to initialize function

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -20,7 +20,7 @@
               <label>Minutes</label>
               <input type="text" name="minutes" id="mnts">
             </div>
-            <input type="submit" value="Search" id="submit">
+            <input type="submit" value="Search" id="submitId">
           </form>
         </div>
         <div id="map"></div>
