submit button -> html button

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -19,7 +19,7 @@
               <label>Minutes</label>
               <input type="text" name="minutes" id="mnts">
             </div>
-            <input type="submit" value="Search" id="submitId">
+            <button id="submitId">Search</button>
           </form>
         </div>
         <div id="map"></div>
