update id of submit btn

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -19,7 +19,7 @@
               <label>Minutes</label>
               <input type="text" name="minutes" id="mnts">
             </div>
-            <button id="submitId" type="button">Search</button>
+            <button id="submit-id" type="button">Search</button>
           </form>
         </div>
         <div id="map"></div>
