--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Where to?</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVMBrodYngWBvQuH6Qfl5aKsa6UZ6Bl6I&libraries=places"></script>
+    <script src="secrets.json"></script>
     <script src="script.js"></script>
   </head>
   
