Fix the drawer zindex

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -20,9 +20,9 @@
     </div>
 
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
-        >&#9776;</span
-      >
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()">
+        &#9776;
+      </span>
       <div id="mapWrap">
         <div id="map"></div>
         <div id="over_map"></div>
