--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Where to?</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="secrets.json"></script>
     <script src="script.js"></script>
   </head>
-  
+
   <body onload="initialize();">
-<<<<<<< HEAD
     <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+        >&times;</a
+      >
       <a href="#">About</a>
       <a href="#">Services</a>
       <a href="#">Clients</a>
       <a href="#">Contact</a>
     </div>
-
     <div id="main">
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()">
+        &#9776;
+      </span>
       <div id="mapWrap">
-=======
-    <div id="container">
-        <div id="nav">
-          <form>
-            <label>Travel time: </label>
-            <div id="input-wrap">
-              <label>Hours</label>
-              <input type="text" name="hours" id="hrs">
-              <label>Minutes</label>
-              <input type="text" name="minutes" id="mnts">
-            </div>
-            <button id="submit-id" type="button">Search</button>
-          </form>
-        </div>
->>>>>>> 51de0853a75c15e393c0aa389afb9076324061d2
         <div id="map"></div>
         <div id="over_map"></div>
       </div>
