Consistent id naming

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -37,7 +37,7 @@
           &#9776;
         </span>
       </div>
-      <div id="mapWrap">
+      <div id="map-wrap">
         <div id="map"></div>
         <div id="over-map"></div>
       </div>
