Add buttons(Sign up, Log in, Log out) for authentication.

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -36,6 +36,23 @@
             </div>
             <button id="submit-id" type="button">Search</button>
           </form>
+          <div class="container">
+            <input id="textEmail" type="email" placeholder="Email">
+
+            <input id="txtPassword" type="password" placeholder="Password">
+
+            <button id="btnLogin" cleass "btn btn-action">
+              Log in
+            </button>
+
+            <button id="btnSignUp" class="btn btn-secondary">
+              Sign Up 
+            </button>
+
+            <button id="btnLogout" class="btn btn-acrion hide">
+              Log out
+            </button>
+            
         </div>
         <div id="map"></div>
     </div>
