--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -9,39 +9,88 @@
     <script src="secrets.json"></script>
     <script src="script.js"></script>
   </head>
-
   <body onload="initialize();">
-    <div id="sidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-        &times;
-      </a>
-      <form class="form-inline form-mixin">
-        <div class="form-group fg-mixin">
-          <label for="hours" class="bmd-label-floating label-color">HH</label>
-          <input id="hrs" style="width: 100%; margin-right:0px;" type="text" class="form-control">
+    <div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
+      <header class="bmd-layout-header">
+        <div class="navbar navbar-light bg-faded">
+          <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
+            <span class="sr-only">Toggle drawer</span>
+            <span>
+              &#9776;
+            </span>
+          </button>
+          <ul class="nav navbar-nav">
+            <li class="nav-item">login</li>
+          </ul>
         </div>
-        <div id="colon" class="form-group bmd-label-static">
-          :
+      </header>
+      <div id="dw-s2" class="bmd-layout-drawer bg-faded">
+        <header>
+          <a class="navbar-brand">Settings</a>
+        </header>
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h1 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  Travel Time
+                </button>
+              </h1>
+            </div>
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <form class="form-inline form-mixin">
+                  <div class="form-group fg-mixin">
+                    <label for="hours" class="bmd-label-floating label-color">HH</label>
+                    <input id="hrs" style="width: 100%; margin-right:0px;" type="text" class="form-control">
+                  </div>
+                  <div id="colon" class="form-group bmd-label-static">
+                    :
+                  </div>
+                  <div class="form-group fg-mixin">
+                    <label for="minutes" class="bmd-label-floating label-color">MM</label>
+                    <input id="mnts" style="width: 100%; margin-right:0px;" type="text" class="form-control">
+                  </div>
+                  </form>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h1 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Home Location
+                  </button>
+                </h1>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body">
+                  Home location selector
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h1 class="mb-0">
+                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Option 3
+                  </button>
+                </h1>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                <div class="card-body">
+                  Another search option
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group fg-mixin">
-          <label for="minutes" class="bmd-label-floating label-color">MM</label>
-          <input id="mnts" style="width: 100%; margin-right:0px;" type="text" class="form-control">
-        </div>
-        <span style="margin: auto; margin-right: 5px;" class="form-group bmd-form-group">
+        <span style="margin-top: 10px; margin-left: auto; margin-right: auto">
           <button type="button" id="submit" class="btn btn-primary">Search</button>
         </span>
-      </form>
-    </div>
-    <div id="main">
-      <div id="header">
-        <span onclick="openNav()">
-          &#9776;
-        </span>
       </div>
-      <div id="map-wrap">
+      <main class="bmd-layout-content">
         <div id="map"></div>
-        <div id="over-map"></div>
-      </div>
+      </main>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
