Add form signin to login page

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -26,7 +26,7 @@
       </header>
       <div id="dw-s2" class="bmd-layout-drawer bg-faded">
         <header>
-          <a class="navbar-brand">Settings</a>
+          <a class="navbar-brand">Search Settings</a>
         </header>
         <div id="accordion">
           <div class="card">
