--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -20,7 +20,9 @@
             </span>
           </button>
           <ul class="nav navbar-nav">
-            <li class="nav-item">login</li>
+            <li class="nav-item">
+              <a href="login.html">login</a>
+            </li>
           </ul>
         </div>
       </header>
