Add login/signup buttons

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -21,7 +21,9 @@
           </button>
           <ul class="nav navbar-nav">
             <li class="nav-item">
-              <a href="login.html">login</a>
+              <a class="btn btn-outline-primary" href="#">Login</a>
+              <span id="nav-text">or</span>
+              <a class="btn btn-outline-primary" href="#">Sign up</a>
             </li>
           </ul>
         </div>
