--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <div class="navbar navbar-light bg-faded">
           <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
             <span class="sr-only">Toggle drawer</span>
-            <span>
+            <span class="text-color">
               &#9776;
             </span>
           </button>
@@ -36,23 +36,23 @@
           <div class="card">
             <div class="card-header" id="headingOne">
               <h1 class="mb-0">
-                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   Travel Time
                 </button>
               </h1>
             </div>
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
                 <form class="form-inline form-mixin">
                   <div class="form-group fg-mixin">
-                    <label for="hours" class="bmd-label-floating label-color">HH</label>
+                    <label for="hours" class="bmd-label-floating text-color">HH</label>
                     <input id="hrs" style="width: 100%; margin-right:0px;" type="text" class="form-control">
                   </div>
                   <div id="colon" class="form-group bmd-label-static">
                     :
                   </div>
                   <div class="form-group fg-mixin">
-                    <label for="minutes" class="bmd-label-floating label-color">MM</label>
+                    <label for="minutes" class="bmd-label-floating text-color">MM</label>
                     <input id="mnts" style="width: 100%; margin-right:0px;" type="text" class="form-control">
                   </div>
                   </form>
@@ -61,27 +61,27 @@
             <div class="card">
               <div class="card-header" id="headingTwo">
                 <h1 class="mb-0">
-                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     Home Location
                   </button>
                 </h1>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-body">
+                <div class="card-body text-color">
                   Home location selector
                 </div>
               </div>
             </div>
             <div class="card">
-              <div class="card-header" id="headingTwo">
+              <div class="card-header" id="headingThree">
                 <h1 class="mb-0">
-                  <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     Option 3
                   </button>
                 </h1>
               </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-body">
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <div class="card-body text-color">
                   Another search option
                 </div>
               </div>
