--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -12,7 +12,7 @@
   <body onload="initialize();">
     <div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
       <header class="bmd-layout-header">
-        <div class="navbar navbar-light bg-faded" style="background-color: #6CC551">
+        <div class="navbar navbar-dark bg-faded" style="">
           <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
             <span class="sr-only">Toggle drawer</span>
             <span class="text-color">
@@ -21,9 +21,9 @@
           </button>
           <ul class="nav navbar-nav">
             <li class="nav-item">
-              <a class="btn btn-outline-primary" style="background-color: white" href="#">Login</a>
+              <a class="btn btn-outline-primary" href="login.html">Login</a>
               <span id="nav-text">or</span>
-              <a class="btn btn-outline-primary" href="#">Sign up</a>
+              <a class="btn btn-outline-primary" href="login.html">Sign up</a>
             </li>
           </ul>
         </div>
