Add signup form

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -12,18 +12,19 @@
   <body onload="initialize();">
     <div class="bmd-layout-container bmd-drawer-f-l bmd-drawer-overlay">
       <header class="bmd-layout-header">
-        <div class="navbar navbar-dark bg-faded" style="">
+        <div class="navbar navbar-dark bg-faded">
           <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
             <span class="sr-only">Toggle drawer</span>
-            <span class="text-color">
+            <span class="btn text-color" style="font-size: 1.2em; color: #049688">
               &#9776;
             </span>
           </button>
           <ul class="nav navbar-nav">
             <li class="nav-item">
-              <a class="btn btn-outline-primary" href="login.html">Login</a>
+                <img class="btn btn-icon" src="icons/help.svg">
+              <a class="btn btn-outline-primary" style="text-align: center" href="login.html">Login</a>
               <span id="nav-text">or</span>
-              <a class="btn btn-outline-primary" href="login.html">Sign up</a>
+              <a class="btn btn-outline-primary" href="signup.html">Sign up</a>
             </li>
           </ul>
         </div>
