--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -22,8 +22,12 @@
             <label for="passwordInput" class="bmd-label-floating">Password</label>
             <input type="password" class="form-control" id="passwordInput">
           </div>
+          <div class="form-group">
+            <label for="passwordInput" class="bmd-label-floating">Confirm password</label>
+            <input type="password" class="form-control" id="passwordInput">
+          </div>
         </form>
-        <button type="button" id="login" class="btn btn-primary">Login</button>
+        <button type="button" id="login" class="btn btn-primary">sign up</button>
         <button type="button" id="back" onclick="location.href='index.html'" class="btn btn-primary" href="index.html">back to map</button>
       </div>
     </div>
