Add new selected pin icon

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <div class="navbar navbar-dark bg-faded">
           <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
             <span class="sr-only">Toggle drawer</span>
-            <span class="btn text-color" style="font-size: 1.2em; color: #049688">
+            <span class="btn text-color" style="font-size: 1.5em; color: #049688">
               &#9776;
             </span>
           </button>
@@ -73,20 +73,6 @@
                 </div>
               </div>
             </div>
-            <div class="card">
-              <div class="card-header" id="headingThree">
-                <h1 class="mb-0">
-                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Option 3
-                  </button>
-                </h1>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <div class="card-body text-color">
-                  Another search option
-                </div>
-              </div>
-            </div>
           </div>
         </div>
         <span style="margin-top: 10px; margin-left: auto; margin-right: auto">
@@ -94,6 +80,21 @@
         </span>
       </div>
       <main class="bmd-layout-content">
+        <div class="container card-scroller">
+          <div class="card location-card">
+            <div class="card-body">
+              <h5 class="card-title">Title</h5>
+              <p>Address</p>
+              <p>Travel Time</p>
+            </div>
+          </div>
+          <div class="card ">
+            <div class="card-body">
+              <h5 class="card-title">Login</h5>
+              gjjgjgjgj
+            </div>
+          </div>
+        </div>
         <div id="map"></div>
       </main>
     </div>
