--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -19,6 +19,24 @@
           <label>Minutes</label>
           <input type="text" name="minutes" id="mnts">
         </div>
+        <button id="submit-id" type="button">Search</button>
+      </form>
+      <div class="container">
+        <input id="textEmail" type="email" placeholder="Email">
+
+        <input id="textPassword" type="password" placeholder="Password">
+
+        <button id="btnLogin" cleass "btn btn-action">
+          Log in
+        </button>
+
+        <button id="btnSignUp" class="btn btn-secondary">
+          Sign Up
+        </button>
+
+        <button id="btnLogout" class="btn btn-action hide">
+          Log out
+        </button>
       </div>
     </div>
     <div id="map"></div>
@@ -51,5 +69,3 @@
   </script>
   <script src="script.js"></script>
 </body>
-
-</html>
