--- a/where-to-travel/src/main/webapp/login.html
+++ b/where-to-travel/src/main/webapp/login.html
@@ -16,11 +16,11 @@
         <form style="margin: auto">
           <div class="form-group">
             <label for="emailInput" class="bmd-label-floating">Email address</label>
-            <input type="email" class="form-control" id="emailInput">
+            <input type="email" class="form-control" id="emailLogin">
           </div>
           <div class="form-group">
             <label for="passwordInput" class="bmd-label-floating">Password</label>
-            <input type="password" class="form-control" id="passwordInput">
+            <input type="password" class="form-control" id="passwordLogin">
           </div>
         </form>
         <button type="button" id="login" class="btn btn-primary">Login</button>
