--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -16,18 +16,18 @@
         <form style="margin: auto">
           <div class="form-group">
             <label for="emailInput" class="bmd-label-floating">Email address</label>
-            <input type="email" class="form-control" id="emailInput">
+            <input type="email" class="form-control" id="emailSignUp">
           </div>
           <div class="form-group">
             <label for="passwordInput" class="bmd-label-floating">Password</label>
-            <input type="password" class="form-control" id="passwordInput">
+            <input type="password" class="form-control" id="passwordSignUp">
           </div>
           <div class="form-group">
             <label for="passwordInput" class="bmd-label-floating">Confirm password</label>
-            <input type="password" class="form-control" id="passwordInput">
+            <input type="password" class="form-control" id="passwordConfirmation">
           </div>
         </form>
-        <button type="button" id="login" class="btn btn-primary">sign up</button>
+        <button type="button" id="signUp" class="btn btn-primary">sign up</button>
         <button type="button" id="back" onclick="location.href='index.html'" class="btn btn-primary" href="index.html">back to map</button>
       </div>
     </div>
