Add card system

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -80,18 +80,19 @@
         </span>
       </div>
       <main class="bmd-layout-content">
-        <div class="container card-scroller">
-          <div class="card location-card">
+        <div class="container card-scroller" id="scroller">
+          <div class="card location-card" placeName="place3">
             <div class="card-body">
               <h5 class="card-title">Title</h5>
               <p>Address</p>
               <p>Travel Time</p>
             </div>
           </div>
-          <div class="card ">
+          <div class="card location-card" placeName="place2">
             <div class="card-body">
-              <h5 class="card-title">Login</h5>
-              gjjgjgjgj
+              <h5 class="card-title">Title</h5>
+              <p>Address</p>
+              <p>Travel Time</p>
             </div>
           </div>
         </div>
