--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -11,7 +11,7 @@
   <body>
     <div class="card over-card">
       <div class="card-body">
-        <h5 class="card-title">Login</h5>
+        <h5 class="card-title">Sign Up</h5>
         <form style="margin: auto">
           <div class="form-group">
             <label for="emailInput" class="bmd-label-floating">Email address</label>
