Add email verification.

--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -17,6 +17,7 @@
             <label for="emailInput" class="bmd-label-floating">Email address</label>
             <input type="email" class="form-control" id="emailSignUp">
           </div>
+           <h1 id='result'></h1>
           <div class="form-group">
             <label for="passwordInput" class="bmd-label-floating">Password</label>
             <input type="password" class="form-control" id="passwordSignUp">
