--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -67,9 +67,12 @@
                 </h1>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-body text-color">
-                  Home location selector
-                </div>
+                  <div class="card-body text-color">
+                    <div class="form-group">
+                      <label for="emailInput" class="bmd-label-floating">Address</label>
+                      <input type="email" class="form-control" id="emailSignUp">
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
