--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -19,11 +19,8 @@
             </span>
           </button>
           <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <img class="btn btn-icon" src="icons/help.svg">
-              <a class="btn btn-outline-primary" style="text-align: center" href="login.html">Login</a>
-              <span id="nav-text">or</span>
-              <a class="btn btn-outline-primary" href="signup.html">Sign up</a>
+            <li class="nav-item" id="dashboard">
+              <img class="btn btn-icon" src="icons/help.svg">
             </li>
           </ul>
         </div>
