--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -67,22 +67,19 @@
                 </h1>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-body text-color">
-                  Home location selector
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header" id="headingThree">
-                <h1 class="mb-0">
-                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Option 3
+                <div class="card-header text-color text-center">
+                  <button onclick="useLocation()" class="btn btn-secondary collapsed" aria-expanded="false" aria-controls="collapseTwo">
+                    Use Your Location
                   </button>
-                </h1>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                <div class="card-body text-color">
-                  Another search option
+                </div>
+                <div class="card-header text-color">
+                  <div class="form-group">
+                    <label for="adressInput" class="bmd-label-floating">Address</label>
+                    <input type="text" class="form-control" id="addressInput">
+                  </div>
+                  <div class="text-center">
+                    <button onclick="useAddress()" type="button" class="btn btn-secondary">Enter Address</button>
+                  </div>
                 </div>
               </div>
             </div>
@@ -97,7 +94,6 @@
         <div id="map"></div>
       </main>
     </div>
-    <div id="map"></div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js" integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
