--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -66,7 +66,7 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                   <div class="card-body text-color">
                     <div class="form-group">
-                      <label for="emailInput" class="bmd-label-floating">Address</label>
+                      <label for="emailInput" class="bmd-label-floating text-color">Address</label>
                       <input type="email" class="form-control" id="emailSignUp">
                     </div>
                   </div>
