--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -20,7 +20,7 @@
           </button>
           <ul class="nav navbar-nav">
             <li class="nav-item">
-                <img class="btn btn-icon" src="icons/help.svg">
+                <img onclick="showInfoModal()" class="btn btn-icon" src="icons/help.svg">
               <a class="btn btn-outline-primary" style="text-align: center" href="login.html">Login</a>
               <span id="nav-text">or</span>
               <a class="btn btn-outline-primary" href="signup.html">Sign up</a>
