--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -12,22 +12,28 @@
     <div class="card over-card">
       <div class="card-body">
         <h5 class="card-title">Sign up</h5>
-        <form style="margin: auto">
+        <form class="needs-validation" style="margin: auto" id="signUpForm" novalidate>
           <div class="form-group">
             <label for="emailInput" class="bmd-label-floating">Email address</label>
             <input type="email" class="form-control" id="emailSignUp">
           </div>
           <div class="form-group">
-            <label for="passwordInput" class="bmd-label-floating">Password</label>
+            <label for="passwordSignUp" class="bmd-label-floating">Password</label>
             <input type="password" class="form-control" id="passwordSignUp">
+            <div class="invalid-feedback">
+              You must agree before submitting.
+            </div>
           </div>
           <div class="form-group">
-            <label for="passwordInput" class="bmd-label-floating">Confirm password</label>
+            <label for="passwordConfirmation" class="bmd-label-floating">Confirm password</label>
             <input type="password" class="form-control" id="passwordConfirmation">
+            <div class="invalid-feedback">
+              Passwords do not match!
+            </div>
           </div>
-        </form>
-        <button type="button" id="signUp" class="btn btn-primary">sign up</button>
+        <button type="submit" id="submit" class="btn btn-primary" >sign up</button>
         <button type="button" id="back" onclick="location.href='index.html'" class="btn btn-primary" href="index.html">back to map</button>
+        </form>
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
