Remove inline styles

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -14,7 +14,7 @@
         <div class="navbar navbar-dark bg-faded">
           <button class="navbar-toggler" type="button" data-toggle="drawer" data-target="#dw-s2">
             <span class="sr-only">Toggle drawer</span>
-            <span class="btn text-color" style="font-size: 1.5em; color: #049688">
+            <span id="drawer-toggle" class="btn">
               &#9776;
             </span>
           </button>
@@ -75,7 +75,7 @@
           </div>
         </div>
 
-        <span style="margin-top: 10px; margin-left: auto; margin-right: auto">
+        <span>
           <button type="button" id="submit" class="btn btn-primary">Search</button>
         </span>
       </div>
