Wrap long html lines

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Where to?</title>
     <link rel="icon" href="icons/pin.svg">
-    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" 
+        integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="secrets.json"></script>
   </head>
@@ -36,7 +37,8 @@
           <div class="card">
             <div class="card-header" id="headingOne">
               <h1 class="mb-0">
-                <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseOne"
+                    aria-expanded="false" aria-controls="collapseOne">
                   Travel Time
                 </button>
               </h1>
@@ -61,7 +63,8 @@
             <div class="card">
               <div class="card-header" id="headingTwo">
                 <h1 class="mb-0">
-                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseTwo"
+                      aria-expanded="false" aria-controls="collapseTwo">
                     Home Location
                   </button>
                 </h1>
