--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -14,6 +14,10 @@
         <h5 class="card-title">Sign up</h5>
         <form style="margin: auto">
           <div class="form-group">
+            <label for="nameInput" class="bmd-label-floating">Name</label>
+            <input type="email" class="form-control" id="nameSignUp">
+          </div>
+          <div class="form-group">
             <label for="emailInput" class="bmd-label-floating">Email address</label>
             <input type="email" class="form-control" id="emailSignUp">
           </div>
@@ -44,7 +48,6 @@
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
     <script>
-<<<<<<< HEAD
       // Your web app's Firebase configuration
       var firebaseConfig = {
         apiKey: "AIzaSyBWdvjzcH9EEGrqCG0ca8G8VDZwCSyAL-k",
@@ -60,12 +63,7 @@
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
       firebase.analytics();
-=======
-        
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    firebase.analytics();
->>>>>>> 53cc0698fb60c48e0b15986d24e15f2ea39d4cf7
+
     </script>
     <script src="signup.js"></script>
   </body>
