--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -74,24 +74,12 @@
             </div>
           </div>
         </div>
-
-        <span>
-          <button type="button" id="submit" class="btn btn-primary">Search</button>
+        <span id="search-btn-container">
+          <button type="button" id="submit" class="btn btn-primary search-btn">Search</button>
         </span>
       </div>
       <main class="bmd-layout-content">
         <div class="card-scroller" id="scroller">
-          <div class="card location-card" placeName="${title}" style="margin-right: 0;">
-            <div class="card-body">
-              <h5 class="card-title">${title} ggggggggggggggggggggggggg
-              <span class="icon" id="${iconId}">
-                &#9733
-              <span>
-              </h5>
-              <a target="_blank" href="${directionsLink}" class="badge badge-primary">Directions</a>
-              <p>${timeStr}</p>
-            </div>
-          </div>
         </div>
         <div id="map"></div>
       </main>
