--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -31,7 +31,7 @@
               Passwords do not match!
             </div>
           </div>
-        <button type="submit" id="submit" class="btn btn-primary" >sign up</button>
+        <button type="submit" id="submit" class="btn btn-primary" >Sign up</button>
         <button type="button" id="back" onclick="location.href='index.html'" class="btn btn-primary" href="index.html">back to map</button>
         </form>
       </div>
