Hide scroller when not in use

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -93,7 +93,7 @@
         </span>
       </div>
       <main class="bmd-layout-content">
-        <div class="card-scroller" id="scroller">
+        <div hidden class="card-scroller" id="scroller">
         </div>
         <div id="map"></div>
       </main>
