--- a/where-to-travel/src/main/webapp/signup.html
+++ b/where-to-travel/src/main/webapp/signup.html
@@ -16,6 +16,9 @@
           <div class="form-group">
             <label for="emailInput" class="bmd-label-floating">Email address</label>
             <input type="email" class="form-control" id="emailSignUp" required>
+            <small class="form-text text-muted">
+              We will never share your email.
+            </small>
             <div class="invalid-feedback">
               Please enter a valid email.
             </div>
@@ -25,9 +28,12 @@
           </div>
           <div class="form-group">
             <label for="passwordSignUp" class="bmd-label-floating">Password</label>
-            <input type="password" class="form-control" minlength="6" id="passwordSignUp" oninvalid="this.setCustomValidity('Password must be at least 6 characters.')">
+            <input type="password" class="form-control" minlength="6" id="passwordSignUp" >
+            <small class="form-text text-muted">
+              Your password must be more than 6 characters long.
+            </small>
             <div class="invalid-feedback">
-              Please enter a valid password that is longer than 6 characters.
+              Please enter a password longer than 6 characters.
             </div>
             <div class="valid-feedback">
               Looks good!
