Add feedback onfocusout for search inputs

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -57,7 +57,7 @@
                     <label for="minutes" class="bmd-label-floating text-color">MM</label>
                     <input id="mnts" style="width: 100%; margin-right:0px;" type="text" class="form-control">
                   </div>
-                  </form>
+                </form>
               </div>
             </div>
             <div class="card">
@@ -91,6 +91,9 @@
         <span id="search-btn-container">
           <button type="button" id="submit" class="btn btn-primary search-btn">Search</button>
         </span>
+        <div id="feedback-target" style="text-align: center;">
+          <div class="feedback">feedback</div>
+        </div>
       </div>
       <main class="bmd-layout-content">
         <div hidden class="card-scroller" id="scroller">
