Add modal for finding location

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -72,7 +72,7 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-header text-color text-center">
                   <button onclick="getHomeLocation(false)" class="btn btn-secondary collapsed" aria-expanded="false" aria-controls="collapseTwo">
-                    Use Your Location
+                    Use My Location
                   </button>
                 </div>
                 <div class="card-header text-color">
