Change placeholder for address input

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -72,7 +72,7 @@
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-header text-color">
                   <div class="form-group">
-                    <input type="text" class="form-control text-center" id="addressInput">
+                    <input type="text" class="form-control text-center" placeholder="Enter an address" id="addressInput">
                   </div>
                   <div class="text-center">
                     <button onclick="getHomeLocation(false)" type="button" class="btn btn-secondary">Use My Location</button>
