Add new file, displaySavedPlaces.js to display saved places.

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -205,4 +205,5 @@
   <script src="script.js"></script>
   <script src="signup.js"></script>
   <script src="login.js"></script>
+  <script src="displaySavedPlaces.js"</script>
 </body>
