Add tag frontend + some filler tags

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -87,10 +87,33 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header text-center" id="headingThree">
+                <h1 class="mb-0">
+                  <button class="btn btn-link collapsed text-color" data-toggle="collapse" data-target="#collapseThree"
+                        aria-expanded="false" aria-controls="collapseThree">
+                    Search Tags
+                  </button>
+                </h1>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                <div class="card-header text-color">
+                  <div class="multi-select-container">
+                    <div class="multi-select-pill">Tag</div>
+                    <div class="multi-select-pill">Tag</div>
+                    <div class="multi-select-pill">Tag</div>
+                    <div class="multi-select-pill">Tag</div>
+                    <div class="multi-select-pill">Tag</div>
+                    <div class="multi-select-pill">Tag</div>
+                  </div>
+                </div>
+              </div>
             </div>  
 
           </div>
-        
+
           <span id="search-btn-container">
             <button type="button" id="submit" class="btn btn-primary search-btn">Search</button>
           </span>
