Add text to tags

--- a/where-to-travel/src/main/webapp/index.html
+++ b/where-to-travel/src/main/webapp/index.html
@@ -101,12 +101,12 @@
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                 <div class="card-header text-color">
                   <div class="multi-select-container">
-                    <div class="multi-select-pill">Tag</div>
-                    <div class="multi-select-pill">Tag</div>
-                    <div class="multi-select-pill">Tag</div>
-                    <div class="multi-select-pill">Tag</div>
-                    <div class="multi-select-pill">Tag</div>
-                    <div class="multi-select-pill">Tag</div>
+                    <div class="multi-select-pill">Tourism</div>
+                    <div class="multi-select-pill">Hiking</div>
+                    <div class="multi-select-pill">Beach</div>
+                    <div class="multi-select-pill">Museum</div>
+                    <div class="multi-select-pill">Park</div>
+                    <div class="multi-select-pill">Shopping</div>
                   </div>
                 </div>
               </div>
